--- a/research.html
+++ b/research.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Greg Gakis</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header>
+        <div>
+            <h1>Greg Gakis</h1>
+        </div>
+        <nav>
+            <a href="index.html">Self</a>
+            <a href="index.html">Second self</a>
+            <a href="index.html">Third self</a>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Linear system inversion</h2>
+        <p>Filtering</p>
+    </section>
+
+</body>
+</html>
