added links for research

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1>Greg Gakis</h1>
         </div>
         <nav>
-            <a href="index.html">Self</a>
-            <a href="index.html">Second self</a>
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
             <a href="index.html">Third self</a>
         </nav>
     </header>
